--- a/src/main/resources/templates/pitchbooking/pitchSchedule.html
+++ b/src/main/resources/templates/pitchbooking/pitchSchedule.html
@@ -22,7 +22,7 @@
 	<b>This is pitch page!</b>
 
 	<br />
-	<a type="button" th:href="@{/createpitchbooking}" class="btn pull-left"><i
+	<a type="button" th:href="@{/createPitchBooking}" class="btn pull-left"><i
 		class="fas fa-plus-circle"></i>Đặt sân</a>
 	<br />
 </body>
