--- a/src/main/resources/templates/pitch/detailPitch.html
+++ b/src/main/resources/templates/pitch/detailPitch.html
@@ -52,7 +52,7 @@
         </div>
         <div class="form-group">
             <label>Giá :</label>
-            <div th:utext="${pitch.getPrice()}" id="price"></div>
+            <div th:utext="${pitch.getCost()}" id="cost"></div>
         </div>
         
         
