--- a/src/main/resources/templates/pitch/pitch.html
+++ b/src/main/resources/templates/pitch/pitch.html
@@ -45,7 +45,7 @@
 			
 			
 			<td style="white-space: nowrap"><a
-				th:href="@{/pitchSchedule?id={id}(id=${pitch.pitchId})}">
+				th:href="@{/pitchbooking/pitchSchedule?id={id}(id=${pitch.pitchId})}">
 					Đặt sân</a></td>
 			<td>
 			<td style="white-space: nowrap"><a
