--- a/src/main/resources/templates/_menu.html
+++ b/src/main/resources/templates/_menu.html
@@ -1,4 +1,4 @@
-<div xmlns:th="http://www.thymeleaf.org"
+<!-- <div xmlns:th="http://www.thymeleaf.org"
      style="border: 1px solid #ccc;padding:5px;margin-bottom:20px;">
  
   <a th:href="@{/}">Home</a>
@@ -19,4 +19,28 @@
       
    <a th:if="${#request.userPrincipal != null}" th:href="@{/logout}">Logout</a>
   
-</div>
+</div> -->
+
+<header id="header" class="">
+
+	<!-- may tinh -->
+	<div class="menu d-none d-lg-block">
+		<div class="container-fluid">
+			<div class="row">
+				<div class="col-md-2 trai">
+					<a href="#"><img id="img-360"
+						src="image/pic_ifootball/logo.png" alt=""></a>
+
+				</div>
+
+				<div class="col-md-10 phai">
+					<ul class="menu-link">
+						<li class=""><a href="#" class="">Sân bóng</a></li>
+						<li class="nav-item"><a href="#" class="">Tìm đối</a></li>
+						<li class=""><a href="#" class="">Đăng ký/Đăng nhập</a></li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</div>
+</header>
