--- a/src/main/resources/templates/welcomePage.html
+++ b/src/main/resources/templates/welcomePage.html
@@ -1,15 +1,33 @@
 <!DOCTYPE HTML>
+
 <html xmlns:th="http://www.thymeleaf.org">
-   <head>
-      <title th:utext="${title}"></title>
-   </head>
-    
-   <body>
+<head>
+<title th:utext="${title}"></title>
+<head>
+<title>Login</title>
+
+<!-- See configuration in WebMvConfig.java -->
+<link th:href="@{/bootstrap/css/bootstrap.min.css}" rel="stylesheet"
+	media="screen" />
+
+<link th:href="@{/static/header.css}" rel="stylesheet" type="text/css" />
+<link th:href="@{/static/test/b.css}" rel="stylesheet" type="text/css" />
+
+
+<script th:src="@{/jquery/jquery.min.js}"></script>
+<script th:src="@{/popper/popper.min.js}"></script>
+<script th:src="@{/bootstrap/js/bootstrap.min.js}"></script>
+</head>
+
+
+
+<body>
     
       <!-- Include _menu.html -->
       <th:block th:include="/_menu"></th:block>  
        
-      <h2>Message : <span th:utext="${message}"></span></h2>
+      <h2>Message : <span th:utext="${message}"></span>
+	</h2>
        
    </body>
 </html>
