--- a/src/main/resources/templates/userInfoPage.html
+++ b/src/main/resources/templates/userInfoPage.html
@@ -1,21 +1,111 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
-   <head>
-      <title>User Info</title>
-   </head>
-   <body>
-      <!-- Include _menu.html -->
-      <th:block th:include="/_menu"></th:block>
-       
-       
-      <h2>User Info Page</h2>
-      <h3>Welcome : <span th:utext="${#request.userPrincipal.name}"></span></h3>
-      <b>This is protected page!</b>  
-       
-      <br/><br/>
-       
-      <div th:if="${userInfo != null}" th:utext="${userInfo}"></div>
-       
-   </body>
-    
+<head>
+<title>User Info</title>
+<!-- See configuration in WebMvConfig.java -->
+<link th:href="@{/bootstrap/css/bootstrap.min.css}" rel="stylesheet"
+	media="screen" />
+<link th:href="@{/static/header.css}" rel="stylesheet" type="text/css" />
+<link th:href="@{/static/footer.css}" rel="stylesheet" type="text/css" />
+<link th:href="@{/static/userInfoPage.css}" rel="stylesheet"
+	type="text/css" />
+
+<script th:src="@{/jquery/jquery.min.js}"></script>
+<script th:src="@{/popper/popper.min.js}"></script>
+<script th:src="@{/bootstrap/js/bootstrap.min.js}"></script>
+</head>
+<body>
+	<!-- Include _menu.html -->
+	<th:block th:include="/_menu"></th:block>
+
+
+	<!-- <h2>User Info Page</h2>
+	<h3>
+		Welcome : <span th:utext="${#request.userPrincipal.name}"></span>
+	</h3>
+	<b>This is protected page!</b>
+
+	<div th:if="${userInfo != null}" th:utext="${userInfo}"></div> -->
+
+	<!-- </content> -->
+	<div class="wrapper">
+		<div class="container content">
+
+			<div class="row">
+				<div class="col-md-6">
+					<div class="fp-banner-text">
+						<h3 class="dr-h3">QUẢN LÝ SÂN, TÌM ĐỐI GIAO LƯU ĐẶT SÂN TRỰC
+							TUYẾN</h3>
+						<div class="description">
+
+							<ul class="menu-list-info">
+								<li>Dễ dàng tìm kiếm sân bóng quanh khu vực</li>
+								<li>Nhanh chóng, thuận tiện và uy tín khi đặt sân trực
+									tuyến</li>
+								<li>Hoàn toàn miễn phí!</li>
+								<li>Tìm đối giao lưu, kết bạn dễ dàng</li>
+								<li>Quản lý sân, lịch biểu hiệu quả, tiết kiệm tối đa thời
+									gian</li>
+								<li>Giảm thiểu tối đa tình trạng trống sân, cháy đối!</li>
+							</ul>
+						</div>
+
+					</div>
+					<br>
+					<button type="submit" class="btn btn-info">Xem chi tiết</button>
+
+				</div>
+				<div class="col-md-1"></div>
+				<div class="col-md-5">
+					
+				</div>
+			</div>
+
+		</div>
+	</div>
+
+	<!-- footer -->
+	<footer id="footer">
+
+		<div class="container">
+			<div class="row">
+				<div class="col-md-4">
+					<div></div>
+					<h5>Hệ thống cửa hàng</h5>
+					<ul>
+						<li>123 Cầu Giấy</li>
+						<li>123 Hồ Tùng Mậu</li>
+						<li>5 Xuân Thủy</li>
+						<li>4 Phạm Văn Đồng</li>
+					</ul>
+				</div>
+				<div class="col-md-4">
+					<h5>Chính sách và quy định chung</h5>
+					<ul>
+						<li>Hướng dẫn mua hàng</li>
+						<li>Hình thức thanh toán</li>
+						<li>Quy định về bảo mật thông tin</li>
+						<li>Chính sách và quy trình xử lý khiếu nại</li>
+						<li>Chính sách bảo hành</li>
+					</ul>
+				</div>
+				<div class="col-md-4">
+					<h5>Địa chỉ</h5>
+					<p>IFOOTBALL - WEB bóng đá hàng đậu Việt Nam</p>
+					<ul>
+						<li>Facebook: www.facebook.com/360boutique.hn</li>
+						<li>Điện thoại: (024) 2 0219 555</li>
+						<li>Hotline: 0973 285 886</li>
+						<li>Email: 360boutique.vn@gmail.com</li>
+						<li>Website: https://360boutique.vn/</li>
+					</ul>
+
+				</div>
+			</div>
+		</div>
+
+	</footer>
+
+</body>
+
 </html>
